--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "llm-eng-week-2-exercise",
   "version": "1.0.0",
   "type": "module",
-  "description": "LLM Engineering Week 2 Exercise - React SPA",
+  "description": "UI for the Auto Analyst Stock Analsysis Application",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -26,8 +26,12 @@
     "llm",
     "spa"
   ],
-  "author": "",
+  "author": "Justin Robison",
   "license": "ISC",
+  "engines": {
+    "node": ">=22.21.0 <23.0.0",
+    "npm": ">=10.0.0"
+  },
   "dependencies": {
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-router": "^1.62.0",
